Added hardware resource table

--- a/src/Components/Availibility.css
+++ b/src/Components/Availibility.css
@@ -5,7 +5,10 @@ table{
 td {
     border: 1px solid black;
     text-align: center;
-    padding: 15px;
+}
+
+th {
+    text-align: center;
 }
 
 /* Dropdown Button */
